# JieqiBox-main1

./: .gitignore  .prettierignore  .prettierrc  CONTRIBUTING.md  LICENSE  NOTATION_FORMAT.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: .gitignore  2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  opening_book.rs
src/components/: AboutDialog.vue  AnalysisSidebar.vue  CaptureHistoryPanel.vue  Chessboard.vue  ClearHistoryConfirmDialog.vue  DraggablePanel.vue  EloCalculatorDialog.vue  EngineManagerDialog.vue  EvaluationChart.vue  FenInputDialog.vue  FlipPromptDialog.vue  GameEndDialog.vue  HumanVsAiModeDialog.vue  InterfaceSettingsDialog.vue  JaiOptionsDialog.vue  LanguageSelector.vue  NotationTextDialog.vue  OpeningBookDialog.vue  OpeningBookPanel.vue  PositionEditorDialog.vue  ReviewAnalysisDialog.vue  TimeDialog.vue  TopToolbar.vue  UciOptionsDialog.vue  UciTerminalDialog.vue
src/composables/: useAutosave.ts  useChessGame.ts  useConfigManager.ts  useEvaluationChartSettings.ts  useGameSettings.ts  useHumanVsAiSettings.ts  useInterfaceSettings.ts  useJaiEngine.ts  useOpeningBook.ts  usePanelManager.ts  useSoundEffects.ts  useUciEngine.ts  useWindowManager.ts  useZigaAuto.ts
src/i18n/: index.ts
src/types/: android.d.ts  openingBook.ts
src/utils/: advancedScriptInterpreter.ts  chineseNotation.ts  constants.ts  xqf.ts  (+3 more)
(+10 files in other folders)
