[package]
name = "jieqibox"
version = "0.6.6"
description = "A Modern Jieqi GUI"
authors = ["Velithia"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "jieqibox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta.0"
tauri-plugin-opener = "2"
clipboard = "0.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8.35"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
rusqlite = { version = "0.37.0", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
